[update]Bluetooth 권한 세부 선언 가능하게 적용 완료, [update]Permission Checker 각 권한별로 선언하게 하여 권한 수락 및 거부에 따른 사용자 처리가 가능하도록 개발 진행, [update]권한에 대한 수락 및 거부  result / request 로 분리하여 첫 권한 결과에 따른 다음 권한 절차를 사용자 임의로 설정할 수 있도록 적용, [update]점근 제어자를 사용하여 외부 접근에 대한 가시성을 제어함

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -96,5 +96,13 @@
         tools:ignore="MissingConstraints"
         />
 
+    <androidx.appcompat.widget.AppCompatButton
+        android:id="@+id/btn_request"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
